samples/_failures_safe/1761407292_f7fe01_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_193e5f82.c: In function ‘main’:
./samples/SAFE/__tmp_193e5f82.c:185:12: error: missing terminating " character
  185 |     printf("State Machine Demo
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_193e5f82.c:185:5: error: expected expression at end of input
  185 |     printf("State Machine Demo
      |     ^~~~~~
./samples/SAFE/__tmp_193e5f82.c:185:5: error: expected declaration or statement at end of input
